WebKit/qt/Api/qwebpage_p.h
@@ -180,6 +180,7 @@ public:
     QWidget* inspectorFrontend;
     QWebInspector* inspector;
     bool inspectorIsInternalOnly; // True if created through the Inspect context menu action
+    Qt::DropAction m_lastDropAction;
 
     static bool drtRun;
 };
